--- a/frontend/myCrossing/src/app/app.component.html
+++ b/frontend/myCrossing/src/app/app.component.html
@@ -1,12 +1,15 @@
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
 
-<br>
+<!-- <br>
 <h1>El titulo del TFG es:</h1>
   <h1>{{title}}</h1>
+
+//Esto era para probar la base de datos
 
   <br>
   <ul>
     <li *ngFor="let mydata of data[0]">
       {{mydata.nombre}}
     </li>
-  </ul>
+  </ul> -->
