Header + Database population
Header casi done, falta terminar de poner el boton nice

Nav ahora es sticky

Carpeta imagenes dentro de assets

Archivo de populacion en directorio raiz (junto a front y back)

--- a/frontend/myCrossing/src/app/inicio/inicio.component.html
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.html
@@ -1,12 +1,22 @@
 
   <div class="dv-inicio" id="dv-header">
-    <span>image</span><span>My Crossing</span>
-    <br>
-    <button routerLink="/registro">Empieza ya</button>
+    <div id="portada-wrap">
+      <div>
+        <img src="../../assets/images/logo.png" alt="logo"/>
+      </div>
+      <div id="portada-item2">
+        <h1>My Crossing</h1>
+        <h3>¡Lleva al día el progreso de tu isla!</h3>
+      </div>
+      <div id="portada-item3">
+        <button routerLink="/registro">Empieza ya</button>
+      </div>
+      <br>
+    </div>
   </div>
 
-  <div class="dv-inicio" id="dv-1">
-    <p id="titulo">!A cazar se ha dicho!</p>
+  <div class="dv-inicio" id="dv-0">
+    <p id="titulo">¡A cazar se ha dicho!</p>
     <div>
       <span>imagen que cambia</span>
       <button>Peces</button>
