--- a/frontend/myCrossing/src/app/inicio/inicio.component.css
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.css
@@ -5,6 +5,55 @@
 
 #dv-header{
   background-color: cadetblue;
+  min-height: 33vw;
+  background-image: url("../../assets/images/bckg-inicio.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#portada-wrap{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  margin: 3vw 0 0 5vw;
+}
+
+#portada-wrap > div{
+  height: fit-content;
+  width: fit-content;
+}
+
+#portada-wrap > div > img{
+  width: 20vw;
+  height: 20vw;
+}
+
+#portada-item2{
+  margin: 0 0 0 2vw;
+  color: white;
+  text-shadow: 0px 1px 6px black;
+}
+
+#portada-item3{
+  grid-column-start: 1;
+  grid-column-end: 3;
+  margin: 0.5vw 0 0 15vw;
+}
+
+#portada-item3 > button{
+  color: white;
+  background-color: rgb(50, 50, 50);
+  border: none;
+  padding: 1vw 2vw;
+  text-align: center;
+  cursor: pointer;
+  font-size: 1.5vw;
+  border-radius: 50px;
+}
+
+#dv-0{
+  background-color: aquamarine;
+  box-shadow: 0px -20px 20px 0px rgb(23 23 23 / 55%)
 }
 
 #dv-1{
