--- a/frontend/myCrossing/src/app/inicio/inicio.component.css
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.css
@@ -5,7 +5,7 @@
 
 #dv-header{
   background-color: cadetblue;
-  min-height: 33vw;
+  min-height: 30vw;
   background-image: url("../../assets/images/bckg-inicio.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -15,7 +15,7 @@
 #portada-wrap{
   display: grid;
   grid-template-columns: auto auto auto;
-  margin: 3vw 0 0 5vw;
+  margin: 0 0 0 5vw;
 }
 
 #portada-wrap > div{
@@ -52,12 +52,12 @@
 }
 
 #dv-0{
-  background-color: aquamarine;
+  background-color: #f7f3e8;
   box-shadow: 0px -20px 20px 0px rgb(23 23 23 / 55%)
 }
 
 #dv-1{
-  background-color: aquamarine;
+  background-color: #f7f3e8;
 }
 
 #dv-2{
