--- a/frontend/myCrossing/src/app/navbar/navbar.component.css
+++ b/frontend/myCrossing/src/app/navbar/navbar.component.css
@@ -1,7 +1,13 @@
+:host {
+  display: block;
+  position: sticky;
+  top: 0;
+
+}
+
 #nav{
   padding: 1vw 2vw;
-  background-color: steelblue;
+  background-color: #f7f3e8;
   box-shadow: 0px 0px 7px rgb(50, 50, 50);
-  position: fixed;
-  width: 100%;
+  border-radius: 0px 0px 15px 15px;
 }
