Inicio Done + Footer Comp
- "Parallax"
- Base de botones
- Image  hover switch para div1

Base de footer

--- a/frontend/myCrossing/src/app/app.component.html
+++ b/frontend/myCrossing/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
-
+<app-footer></app-footer>
 <!-- <br>
 <h1>El titulo del TFG es:</h1>
   <h1>{{title}}</h1>
