Vista Perfil + font + color change
-Vista Perfil (base)
-Tareas activa y desactiva funciona (poco elegante, se resetea al cambiar de pag)

-Added font

-Cambiado el color de los div de inicio

--- a/frontend/myCrossing/src/app/navbar/navbar.component.html
+++ b/frontend/myCrossing/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <button routerLink="/probador" >Probador</button>
   <button routerLink="/nabos" >Nabos</button>
 
-  <button routerLink="/prueba">Prueba</button>
+  <button routerLink="/perfil">Perfil temp</button>
 
   <button routerLink="/inicia-sesion">Inicia sesión</button>
 </div>
