--- a/frontend/myCrossing/src/app/inicio/inicio.component.css
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.css
@@ -1,8 +1,11 @@
 /* Colores
 
 Amarillo: #ffefc4
+Lighter amarillo: #fff3d3
 Azul: #ade6e7
+Lighter azul:  #c9f3f3
 Verde: rgb(210, 255, 214)
+Lighter verde: rgb(228, 255, 230)
 Blanco: #f7f3e8
 */
 
@@ -61,16 +64,16 @@ Blanco: #f7f3e8
 }
 
 #dv-0{
-  background-color: rgb(210, 255, 214);
+  background-color: rgb(228, 255, 230);
   box-shadow: 0px -10px 20px 0px rgb(23 23 23 / 55%)
 }
 
 #dv-1{
-  background-color: rgb(210, 255, 214);
+  background-color: rgb(228, 255, 230);
 }
 
 #dv-2{
-  background-color:  #ffefc4;
+  background-color:  #fff3d3;
 }
 
 .dv-inicio > #titulo{
