--- a/frontend/myCrossing/src/app/autenticacion/login/login.component.html
+++ b/frontend/myCrossing/src/app/autenticacion/login/login.component.html
@@ -1,2 +1,11 @@
-<p>login works!</p>
-<p> hide nav when in login or register?</p>
+<form class="formulario" [formGroup]="loginForm">
+    <div class="titulo">Inicio de sesión</div>
+    <label for="user">Usuario: </label>
+    <input id="user" formControlName='usuario' type="text">
+    <br>
+    <label for="password">Contraseña: </label>
+    <input id="password" formControlName='clave' type="password">
+    <br>
+    <button (click)="login(loginForm)">Iniciar sesion</button>
+    <div>{{aviso}}</div>
+</form>
