--- a/frontend/myCrossing/src/app/inicio/inicio.component.html
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.html
@@ -2,7 +2,7 @@
   <div class="dv-inicio" id="dv-header">
     <span>image</span><span>My Crossing</span>
     <br>
-    <button routerLink="/registro">Empieza ya</button>
+    <button *ngIf="!globals.logged" routerLink="/registro">Empieza ya</button>
   </div>
 
   <div class="dv-inicio" id="dv-1">
