--- a/frontend/myCrossing/src/app/navbar/navbar.component.html
+++ b/frontend/myCrossing/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <button routerLink="/probador" >Probador</button>
   <button routerLink="/nabos" >Nabos</button>
 
-  <button routerLink="/perfil">Perfil temp</button>
+  <button *ngIf="globals.logged" routerLink="/perfil">Perfil temp</button>
 
   <button *ngIf="!globals.logged" routerLink="/inicia-sesion">Inicia sesión</button>
   <button *ngIf="globals.logged" (click)="globals.logged=false">Cierra sesión</button>
