--- a/frontend/myCrossing/src/app/autenticacion/login/login.component.html
+++ b/frontend/myCrossing/src/app/autenticacion/login/login.component.html
@@ -1,7 +1,7 @@
 <form class="formulario" [formGroup]="loginForm">
     <div class="titulo">Inicio de sesión</div>
-    <label for="user">Usuario: </label>
-    <input id="user" formControlName='usuario' type="text">
+    <label for="nombre">Usuario: </label>
+    <input id="nombre" formControlName='nombre' type="text">
     <br>
     <label for="password">Contraseña: </label>
     <input id="password" formControlName='clave' type="password">
