--- a/frontend/myCrossing/src/app/navbar/navbar.component.html
+++ b/frontend/myCrossing/src/app/navbar/navbar.component.html
@@ -8,5 +8,5 @@
   <button *ngIf="globals.logged" routerLink="/perfil">Perfil temp</button>
 
   <button *ngIf="!globals.logged" routerLink="/inicia-sesion">Inicia sesión</button>
-  <button *ngIf="globals.logged" (click)="globals.logged=false">Cierra sesión</button>
+  <button *ngIf="globals.logged" (click)="logout()">Cierra sesión</button>
 </div>
