--- a/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
+++ b/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
@@ -8,4 +8,7 @@
       <button (click)="cambiaEstado(this.tarea)" class="tarea" id="todo"></button>
     </ng-template>
   </ng-container>
+  <button id="editar" (click)="mostrar = !mostrar">{{mostrar}}</button>
 </div>
+
+
