--- a/frontend/myCrossing/src/app/footer/footer.component.html
+++ b/frontend/myCrossing/src/app/footer/footer.component.html
@@ -1,3 +1,20 @@
-<div>
-  <p> esto es un ejemplo de footer, hay que hacer bien</p>
+<div class="wave"></div>
+<div id="footer">
+  <div id="grid">
+    <img src="../../assets/images/logo.png"/>
+    <div>
+      <p class="bold">AYUDA</p>
+      <a>Manual de usuario</a>
+    </div>
+    <div>
+      <p class="bold">ACERCA DE</p>
+      <a>Fuente de Datos</a>
+    </div>
+    <div>
+      <p class="bold">LEGAL</p>
+      <br>
+      <p>My Crossing es un sitio creado por fans y no está afiliado de ninguna forma a Nintendo.</p>
+    </div>
+  </div>
 </div>
+
