--- a/frontend/myCrossing/src/app/inicio/inicio.component.css
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.css
@@ -7,6 +7,8 @@ Lighter azul:  #c9f3f3
 Verde: rgb(210, 255, 214)
 Lighter verde: rgb(228, 255, 230)
 Blanco: #f7f3e8
+
+PROBAR INICIO: todos los divs #fffbe1
 */
 
 
