--- a/frontend/myCrossing/src/app/inicio/inicio.component.html
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.html
@@ -29,8 +29,8 @@
       <button id="criaturas-marinas" (mouseover)="imagen = 3">Criaturas marinas</button>
     </div>
   </div>
-
-  <div class="dv-inicio" id="dv-2">
+  <hr>
+  <div class="dv-inicio">
     <p id="titulo">¡Completa el Museo!</p>
     <div class="grid-3">
       <button id="fosiles">Fosiles</button>
@@ -38,8 +38,8 @@
       <button id="arte">Arte</button>
     </div>
   </div>
-
-  <div class="dv-inicio" id="dv-1" >
+  <hr>
+  <div class="dv-inicio">
     <p id="titulo">¡Ve de compras!</p>
     <div class="grid-4">
       <span>imagen</span>
@@ -48,8 +48,8 @@
       <span>imagen</span>
     </div>
   </div>
-
-  <div class="dv-inicio" id="dv-2">
+  <hr>
+  <div class="dv-inicio">
     <p id="titulo">¡Una isla llena de vida!</p>
     <div class="grid-3">
       <span>imagen</span>
