--- a/frontend/myCrossing/src/app/inicio/inicio.component.css
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.css
@@ -15,6 +15,7 @@ PROBAR INICIO: todos los divs #fffbe1
 .dv-inicio{
   min-height: fit-content;
   padding: 2vw 0;
+  background-color: #fffbe1;
 }
 
 #dv-header{
@@ -66,16 +67,7 @@ PROBAR INICIO: todos los divs #fffbe1
 }
 
 #dv-0{
-  background-color: rgb(228, 255, 230);
   box-shadow: 0px -10px 20px 0px rgb(23 23 23 / 55%)
-}
-
-#dv-1{
-  background-color: rgb(228, 255, 230);
-}
-
-#dv-2{
-  background-color:  #fff3d3;
 }
 
 .dv-inicio > #titulo{
