--- a/frontend/myCrossing/src/styles.css
+++ b/frontend/myCrossing/src/styles.css
@@ -8,3 +8,15 @@ body{
   outline: none;
 }
 
+hr{
+  border-width: 0.2vw;
+  border-style: solid;
+  width: 33%;
+  position: absolute;
+  border-color: #69c0c0;
+  margin-inline-start: 33%;
+  border-radius: 20px;
+  background-color:  #69c0c0;
+  margin-block-start: -2px;
+}
+
