--- a/frontend/myCrossing/src/app/inicio/inicio.component.html
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.html
@@ -9,7 +9,7 @@
         <h3>¡Lleva al día el progreso de tu isla!</h3>
       </div>
       <div id="portada-item3">
-        <button *ngIf="!globals.logged" routerLink="/registro">Empieza ya</button>
+        <button *ngIf="!verification.logged" routerLink="/registro">Empieza ya</button>
       </div>
       <br>
     </div>
