--- a/frontend/myCrossing/src/app/autenticacion/login/login.component.css
+++ b/frontend/myCrossing/src/app/autenticacion/login/login.component.css
@@ -3,10 +3,10 @@
     text-align: center;
     font-size: 20px;
 }
-@media(max-width: 10px){
-    .titulo{
-        font-size: 15px;
-    }
+.error{
+    font-size: 1vw;
+    color: red;
+
 }
 .formulario{
     margin-top: 10%;
