--- a/frontend/myCrossing/src/app/autenticacion/registro/registro.component.html
+++ b/frontend/myCrossing/src/app/autenticacion/registro/registro.component.html
@@ -1,3 +1,35 @@
-<div class="formulario">
-<div class="titulo">Registro</div>
-</div>
+<form class="formulario" [formGroup]="registerForm">
+    <div class="titulo">Registro</div>
+    <label for="nombre">Nombre: </label>
+    <input id="nombre" formControlName='nombre' type="text">
+    <br>
+    <label for="password">Contraseña: </label>
+    <input id="password" formControlName='clave' type="password">
+    <br>
+    <label for="isla">Isla: </label>
+    <input id="isla" formControlName='isla' type="text">
+    <br>
+    <label for="fruta">Fruta: </label>
+    <select id="fruta" formControlName='fruta'>
+        <option value="PERA" selected>Pera</option>
+        <option value="MANZANA">Manzana</option>
+        <option value="NARANJA">Naranja</option>
+        <option value="CEREZA">Cereza</option>
+        <option value="MELOCOTON">Melocoton</option>
+    </select>
+    <br>
+    <label for="cumpleanyos">Cumpleanyos: </label>
+    <input id="cumpleanyos" formControlName='cumpleanyos' type="text">
+    <br>
+    <label for="email">Email: </label>
+    <input type="email" id="email" formControlName='email' type="text">
+    <br>
+    <label for="hemisferio">Hemisferio: </label>
+    <select id="hemisferio" formControlName='hemisferio'>
+        <option value="NORTE">Norte</option>
+        <option value="SUR">Sur</option>
+    </select>
+    <br>
+    <button (click)="register(registerForm)">Registrate</button>
+    <div>{{aviso}}</div>
+</form>
