Last commit fixed
Registro comentado para arreglar luego

--- a/frontend/myCrossing/src/app/autenticacion/registro/registro.component.css
+++ b/frontend/myCrossing/src/app/autenticacion/registro/registro.component.css
@@ -1,6 +1,12 @@
 .titulo{
     font-size: 2vw;
     text-align: center;
+    font-size: 20px;
+}
+.error{
+    font-size: 1vw;
+    color: red;
+
 }
 .formulario{
     margin-top: 10%;
@@ -8,4 +14,10 @@
     margin-right: 20%;
     border-width: 1px;
     border-style: solid;
+}
+#user{
+    margin-left: 26px;
+}
+#password{
+    margin-left: 5px;
 }
