--- a/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
+++ b/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
@@ -2,10 +2,10 @@
 <div>
   <ng-container *ngFor="let tarea of data[0]">
     <ng-container *ngIf="tarea.hecha == true; else todo">
-      <button (click)="cambiaEstado(this.tarea)" class="tarea" id="done"></button>
+      <button (click)="cambiaEstado(tarea)" class="tarea" id="done"></button>
     </ng-container>
     <ng-template #todo>
-      <button (click)="cambiaEstado(this.tarea)" class="tarea" id="todo"></button>
+      <button (click)="cambiaEstado(tarea)" class="tarea" id="todo"></button>
     </ng-template>
   </ng-container>
   <button id="editar" (click)="mostrar = !mostrar">{{mostrar}}</button>
