feat: Tarea Create and Edit Mode
-Tarea Create done, pero no funciona, hay que arreglarlo

-Edit Mode WIP,  los botones de tarea no van a funcionar en este comit mientras este probando como hacerlo

--- a/frontend/myCrossing/src/app/perfil/tareas/tareas.component.css
+++ b/frontend/myCrossing/src/app/perfil/tareas/tareas.component.css
@@ -13,14 +13,19 @@ div{
   margin: 0 1vw;
 }
 
-#todo{
+.todo{
   background-color: rgb(226, 214, 174);
   border-color: rgb(252, 183, 79);
 }
 
-#done{
+.done{
   background-color: rgb(171, 219, 164);
   border-color: rgb(99, 252, 79);
+}
+
+#añadir{
+  background-color: rgb(107, 107, 107);
+  border-color: rgb(39, 39, 39);
 }
 
 #editar{
