--- a/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
+++ b/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
@@ -1,14 +1,23 @@
 
 <div>
+  <ng-container>
+
+  </ng-container>
   <ng-container *ngFor="let tarea of data[0]">
     <ng-container *ngIf="tarea.hecha == true; else todo">
-      <button (click)="cambiaEstado(tarea)" class="tarea" id="done"></button>
+      <button (click)="funcion" class="tarea done"></button>
     </ng-container>
     <ng-template #todo>
-      <button (click)="cambiaEstado(tarea)" class="tarea" id="todo"></button>
+      <button (click)="funcion" class="tarea todo"></button>
     </ng-template>
   </ng-container>
-  <button id="editar" (click)="mostrar = !mostrar">{{mostrar}}</button>
+
+  <ng-container *ngIf="modoEdicion && data[0].length < 10">
+    <button (click)="crearTarea()" class="tarea" id="añadir"></button>
+  </ng-container>
+
+  <button id="editar" (click)="activaEdicion()">{{modoEdicion}}{{funcion}}</button>
+
 </div>
 
 
