feat: Tarea Delete done + otros
-Tarea Delete hecho

-Menu edicion hecho WIP

-Ahora si un user no tiene tareas no da error

-ClickOutside instalado pero not working -> TODO

--- a/frontend/myCrossing/src/app/inicio/inicio.component.css
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.css
@@ -156,5 +156,16 @@ PROBAR INICIO: todos los divs #fffbe1
   background-color: rgb(255, 160, 97);
 }
 
+#hr-inicio{
+  border-width: 0.2vw;
+  border-style: solid;
+  width: 33%;
+  position: absolute;
+  border-color: #69c0c0;
+  margin-inline-start: 33%;
+  border-radius: 20px;
+  background-color:  #69c0c0;
+  margin-block-start: -2px;
+}
 
 
