--- a/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
+++ b/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
@@ -1,21 +1,39 @@
 
 <div>
-  <ng-container>
 
-  </ng-container>
   <ng-container *ngFor="let tarea of data[0]">
+
+    <!-- Tarea done -->
     <ng-container *ngIf="tarea.hecha == true; else todo">
-      <button (click)="!modoEdicion ? actualizaTarea(tarea) : abreMenu()" class="tarea done"></button>
+      <button (click)="!modoEdicion ? actualizaTarea(tarea) : abreMenu(tarea)" class="tarea done"></button>
     </ng-container>
+
+    <!-- Tarea todo -->
     <ng-template #todo>
-      <button (click)="!modoEdicion ? actualizaTarea(tarea) : abreMenu()" class="tarea todo"></button>
+      <button (click)="!modoEdicion ? actualizaTarea(tarea) : abreMenu(tarea)" class="tarea todo"></button>
     </ng-template>
+
   </ng-container>
 
+
+  <!-- Menu tarea-->
+  <ng-container *ngIf="menu">
+    <div (clickOutside)="abreMenu(this.tareaMenu)" class="popup-menu">
+      <p>formulario here</p>
+      <hr>
+      <div>
+        <button (click)="borrarTarea(this.tareaMenu)"></button>
+        <span>Borrar</span>
+      </div>
+    </div>
+  </ng-container>
+
+  <!-- Boton crear -->
   <ng-container *ngIf="modoEdicion && data[0].length < 10">
     <button (click)="crearTarea()" class="tarea" id="añadir"></button>
   </ng-container>
 
+  <!-- Boton modo edicion -->
   <button id="editar" (click)="activaEdicion()">{{modoEdicion}}</button>
 
 </div>
