feat: Tarea (Before form)
-El menu esta en % en el medio (aun asi hay que fijarlo o algo)

-El menu se cierra si pulsas la misma tarea y esta abierto o si borras la tarea

-Boton de editar colocado bien

--- a/frontend/myCrossing/src/app/perfil/tareas/tareas.component.css
+++ b/frontend/myCrossing/src/app/perfil/tareas/tareas.component.css
@@ -33,4 +33,6 @@ div{
   height: 2vw;
   background-color: rgb(171, 219, 164);
   border-color: rgb(99, 252, 79);
+  position: absolute;
+  right: 3.5vw;
 }
