--- a/frontend/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.html
+++ b/frontend/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.html
@@ -1,8 +1,8 @@
-  <div class="popup-menu">
+  <div style="width: 20vw" class="popup-menu" #menuDiv>
     <p>formulario here</p>
     <hr>
     <div>
-      <button (click)="borrarTarea(tarea)" class="btn-borrar"></button>
+      <button (click)="borrarTarea(tarea)" class="btn-borrar">D</button>
       <span>Borrar</span>
     </div>
   </div>
