feat: Tarea create fixed
Faltaban unas comillas

--- a/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
+++ b/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
@@ -19,7 +19,7 @@
 
   <!-- Boton crear -->
   <ng-container *ngIf="modoEdicion && data[0].length < 10">
-    <button (click)="crearTarea()" class="tarea" id="añadir"></button>
+    <button (click)="crearTarea()" class="tarea" id="añadir">+</button>
   </ng-container>
 
   <!-- Boton modo edicion -->
