feat: Tareas Img form
-Posicionado boton editar un poco mas arriba

-Inicio sustituido containers por ng-containers

-Ya hay formulario (falta que haya tantos inputs como iconos y que este selccionado el valor, eso next sprint)

--- a/frontend/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.css
+++ b/frontend/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.css
@@ -12,9 +12,14 @@
   font-size: 1.2vw;
 }
 
+.popup-menu > form{
+  margin: 0 0 5% 0;
+}
+
 .popup-menu > div{
-  margin: 5% 0 0 0;
   justify-content: left;
+  margin: 5% 0 0 0;
+
 }
 
 .popup-menu > * > span{
