--- a/frontend/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.html
+++ b/frontend/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.html
@@ -1,5 +1,15 @@
   <div style="width: 20vw" class="popup-menu" #menuDiv>
-    <p>formulario here</p>
+    <form [formGroup]="iconoForm" (ngSubmit)="enviar(iconoForm.value)">
+      <label>Icono</label>
+      <br />
+      <input formControlName="icono" type="radio" value="1">
+      <input formControlName="icono" type="radio" value="2">
+      <input formControlName="icono" type="radio" value="3">
+      <input formControlName="icono" type="radio" value="4">
+      <input formControlName="icono" type="radio" value="5">
+      <br />
+      <button [disabled]="iconoForm.invalid" type="submit">Actualizar</button>
+    </form>
     <hr>
     <div>
       <button (click)="borrarTarea(tarea)" class="btn-borrar">D</button>
