--- a/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
+++ b/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
@@ -4,18 +4,18 @@
 
     <!-- Tarea done -->
     <ng-container *ngIf="tarea.hecha == true; else todo">
-      <button (click)="!modoEdicion ? actualizaTarea(tarea) : abreMenu($event, tarea)" class="tarea done"></button>
+      <button (click)="!modoEdicion ? checkTarea(tarea) : abreMenu($event, tarea)" class="tarea done">{{tarea.imagen_url}}</button>
     </ng-container>
 
     <!-- Tarea todo -->
     <ng-template #todo>
-      <button (click)="!modoEdicion ? actualizaTarea(tarea) : abreMenu($event, tarea)" class="tarea todo"></button>
+      <button (click)="!modoEdicion ? checkTarea(tarea) : abreMenu($event, tarea)" class="tarea todo">{{tarea.imagen_url}}</button>
     </ng-template>
 
   </ng-container>
 
   <!-- Menu tarea-->
-  <app-tarea-menu [menu]="this.tareaMenu" (borrar)="borrarTarea($event)" (clickOutside)="cierraMenu()"> </app-tarea-menu> <!-- (clickOutside)="cierraMenu()"-->
+  <app-tarea-menu [menu]="this.tareaMenu" (actualizar)="actualizaTarea($event)" (borrar)="borrarTarea($event)" (clickOutside)="cierraMenu()"></app-tarea-menu>
 
   <!-- Boton crear -->
   <ng-container *ngIf="modoEdicion && data[0].length < 10">
