--- a/frontend/myCrossing/src/app/perfil/misvecinos/misvecinos.component.html
+++ b/frontend/myCrossing/src/app/perfil/misvecinos/misvecinos.component.html
@@ -1,1 +1,28 @@
-<h2>Mis vecinos</h2>
+<div id="vecino-grid">
+  <div id="vecino-show">
+    <img src="../../../assets/images/logo.png" id="vecino-img">
+    <h3>Nombre</h3>
+    <div>
+      <p>Cumpleaños: 1 de Enero</p>
+      <p>Personalidad: Dulce</p>
+      <p>Especie: Pingüino</p>
+      <p>Género: Femenino</p>
+    </div>
+  </div>
+  <ng-container> <!-- esto tiene que ser 10 veces si o si-->
+    <div class="contenedor-vecino"> <!-- div base -->
+      <ng-container> <!--*ngIf="vecino != null; else vacio" // si hay vecino, pone datos-->
+        <img src="../../../assets/images/logo.png" class="icono"> <!-- icono -->
+        <div class="wrap-vecino">
+          <span>Nombre</span>
+          <button>
+            <span>B</span>
+          </button>
+        </div>
+      </ng-container>
+      <ng-template #vacio> <!-- si no hay vecino, le pone el boton-->
+        <button class="boton-circular" id="añadir">+</button>
+      </ng-template>
+    </div>
+  </ng-container>
+</div>
