--- a/frontend/myCrossing/src/styles.css
+++ b/frontend/myCrossing/src/styles.css
@@ -8,4 +8,13 @@ body{
   outline: none;
 }
 
+.boton-circular{
+  border-radius: 100%;
+  width: 4vw;
+  height: 4vw;
+  border-style: solid;
+  border-width: 0.3vw;
+  cursor: pointer;
+  margin: 0 1vw;
+}
 
