--- a/frontend/myCrossing/src/app/perfil/misvecinos/misvecinos.component.css
+++ b/frontend/myCrossing/src/app/perfil/misvecinos/misvecinos.component.css
@@ -21,6 +21,8 @@ p, span{
   flex-direction: column;
   align-items: center;
   padding: 1vw;
+  visibility: hidden;
+  border-radius: 20px;
 }
 
 #vecino-img{
@@ -41,6 +43,7 @@ p, span{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .icono{
@@ -54,6 +57,11 @@ p, span{
   width: 100%;
   justify-content: space-around;
   align-items: center;
+}
+
+#editar{
+  right: 2vw;
+  top: 45vw;
 }
 
 
