--- a/frontend/myCrossing/src/styles.css
+++ b/frontend/myCrossing/src/styles.css
@@ -18,3 +18,21 @@ body{
   margin: 0 1vw;
 }
 
+.popup-menu{
+  background-color: rgb(0, 0, 0 , 0.75);
+  height: auto;
+  display: block;
+  padding: 7%;
+  border-radius: 15px;
+  color: white;
+  font-size: 1.2vw;
+}
+
+#editar{
+  width: 2vw;
+  height: 2vw;
+  background-color: rgb(171, 219, 164);
+  border-color: rgb(99, 252, 79);
+  position: absolute;
+}
+
