feat: Filtro y form WIP
- Ya se puede filtrar por nombre

-El boton de crear ya abre el menu

-Fix: tareas y misvecinos tratan numeros como numeros y no como strings

-Al abrir el menu, el dato de vecino es el anterior WIP

--- a/frontend/myCrossing/src/app/perfil/misvecinos/vecino-menu/vecino-menu.component.html
+++ b/frontend/myCrossing/src/app/perfil/misvecinos/vecino-menu/vecino-menu.component.html
@@ -1,19 +1,13 @@
-<div class="popup-menu" (busquedaEmitter)="handleSearch($event)">
+<div class="popup-menu" (busquedaEmitter)="filtrar($event)">
+  <div>
+    <input [formControl]="busqueda" type="text" placeholder="Buscar">
+    <button (click)="borrarVecino(vecino)">D</button>
+  </div>
   <form [formGroup]="vecinoForm" (ngSubmit)="enviar(vecinoForm.value)">
-    <div>
-      <input [formControl]="busqueda" type="text" placeholder="Buscar">
-      <button (click)="borrarVecino(vecino)">D</button>
-    </div>
-    <div> <!-- para cada vacino, un input, aqui se limita la busqueda con el search -->
-      <input formControlName="id" type="radio" value="1"> <!-- valor desde api-->
-      <label>1</label> <!-- nombre desde api -->
-      <input formControlName="id" type="radio" value="2"> <!-- valor desde api-->
-      <label>2</label> <!-- nombre desde api -->
-      <input formControlName="id" type="radio" value="3"> <!-- valor desde api-->
-      <label>3</label> <!-- nombre desde api -->
-      <input formControlName="id" type="radio" value="4"> <!-- valor desde api-->
-      <label>4</label> <!-- nombre desde api -->
-    </div>
+    <ng-container *ngFor="let vecino of testArray | filtroVecino:valorFiltrar"> <!-- todos los vecinos de la api -->
+      <input formControlName="id" type="radio" value="{{vecino.vecino_id}}"> <!-- valor desde api-->
+      <label>{{vecino.nombre}}</label> <!-- nombre desde api -->
+    </ng-container>
     <button [disabled]="vecinoForm.invalid" type="submit">Listo</button>
   </form>
 </div>
