--- a/frontend/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.html
+++ b/frontend/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.html
@@ -10,7 +10,7 @@
       <br />
       <button [disabled]="iconoForm.invalid" type="submit">Actualizar</button>
     </form>
-    <hr>
+    <hr class="menu-hr">
     <div>
       <button (click)="borrarTarea(tarea)" class="btn-borrar">D</button>
       <span>Borrar</span>
