--- a/frontend/myCrossing/src/styles.css
+++ b/frontend/myCrossing/src/styles.css
@@ -36,3 +36,12 @@ body{
   position: absolute;
 }
 
+.menu-hr{
+  background-color: white;
+  border-color: white;
+  border-width: 0.1vw;
+  width: 80%;
+  margin: auto;
+  border-radius: 20px;
+  position: relative;
+}
